2. Image looks distorted(Rectangle instead of square) on the web version. Can this be fixed to be square on all pages(My profile, explore..etc)

--- a/src/assets/sass/custom/_devp.scss
+++ b/src/assets/sass/custom/_devp.scss
@@ -259,3 +259,8 @@ input.input_modify {
     width: 100%;
   }
 }
+@media screen and (min-width: 991px){
+  .destkVersion .product_card {
+      height: 380px;
+  }
+}
